src/test/ui/nll/reference-carried-through-struct-field.stderr
error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/reference-carried-through-struct-field.rs:6:5
   |
LL |     let wrapper = Wrap { w: &mut x };
   |                             ------ borrow of `x` occurs here
LL |     x += 1;
   |     ^^^^^^ use of borrowed `x`
LL |     *wrapper.w += 1;
   |     --------------- borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0503`.
